# TradeSeeker

./: .env  .envexample.txt  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLEANUP_PHASE_PLAN.md  COOLDOWN_FIX_REPORT.md  FUTURE_IMPROVEMENTS_EXPLAINED.md  HISTORY_BACKUP_ANALYSIS.md  JSON_FORMAT_ADVANTAGES.md  JSON_IMPROVEMENTS_ANALYSIS.md  JSON_IMPROVEMENTS_FINAL_REPORT.md  JSON_MIGRATION_STATUS.md  MASTER_PLAN.md  NEXT_PHASE_PLAN.md  Nof1Monk.txt  OPTIMIZATION_APPLIED.md  PANDAS_TO_POLARS_PLAN.md  PHASE_4_REVISED_PLAN.md  PROMPT_OPTIMIZATION_PLAN.md  README.md  RISK_LEVEL_GUIDE.md  SMART_CACHE_README.md  admin_server_flask.py  all_trades_log.txt  alpha_arena_deepseek.py  amelelikten_kurtulus_plani.txt  analysis_output.txt  analysis_report.txt  analysis_result.txt  analyze_cycles.py  analyze_data.py  analyze_ideas.py  analyze_losses_v2.py  analyze_price_location.py  backtest.py  binance.py  bot_control.json  compare_coins.py  (+41 more)
.github/workflows/: deploy.yml
TradeSeeker/data/: bot_control.json  cycle_history.json  performance_history.json  performance_report.json  portfolio_state.json  trade_history.json
TradeSeeker/docs/: AI_PROMPTS_REFERENCE.md  README.md  sunum.md
TradeSeeker/src/: utils.py
archive/: alpha_arena_deepseekold.py  configold.py
config/: config.py
data/: bot_control.json  cycle_history.json  full_trade_history.json  ml_predictions.jsonl  performance_history.json  performance_report.json  portfolio_state.json  trade_history.json
data/state/: bot_control.json  cycle_history.json  performance_history.json  performance_report.json  portfolio_state.json  trade_history.json
docs/: LESSONS.md  README.md  arch.html  architecture.md  configuration.md  development.md  guide.md  ideas.txt  index.md  operations.md  sparkline_improvement_proposal.md  sunum.md  technical_audit.md  tree.html
docs/plans/: 2026-07-16-loguru-restoration-design.md  2026-07-17-log-quality-audit.md  2026-07-17-system-fixes.md  2026-07-18-744-cycle-analysis.md  2026-07-20-documentation-plan.md  2026-07-21-docstring-plan.md  2026-07-21-refactoring-plan.md  2026-07-21-test-gap-fix.md  2026-07-21-test-plan.md  pydantic.md  rust-like-safety-plan.md
history_backups/20251111_130523_cycle_35/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251111_152523_cycle_70/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251111_174523_cycle_105/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251111_200523_cycle_140/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251111_222523_cycle_175/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251112_215550_cycle_35/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251113_001550_cycle_70/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251113_124711_cycle_35/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251113_150711_cycle_70/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251113_172711_cycle_105/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251113_194711_cycle_140/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251113_220711_cycle_175/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251114_073026_cycle_35/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251115_123649_cycle_35/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251115_174841_cycle_35/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251115_200841_cycle_70/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251115_222842_cycle_105/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251118_051105_cycle_35/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251118_072822_cycle_36/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251118_094822_cycle_71/: cycle_history.json  metadata.json  performance_history.json  performance_report.json  trade_history.json
history_backups/20251126_194535_cycle_34/: cycle_history.json  metadata.json  performance_history.json  (+1 more)
scratch/: deep_market_forensics.py  deep_performance_analyzer.py  inspect_bullish_trades.py  inspect_ct_risk_levels.py  inspect_cycle_keys.py
scripts/: analyze_er_stats.py  analyze_llm_rejections.py  audit_llm_decisions.py  audit_ml_efficacy.py  data_forensics_lab.py  debug_brain.py  drift_check.py  generate_performance_report.py  intelligence_audit.py  llm_benchmark_answer_key.md  ml_vs_llm_analysis.py  quant_audit.py  reset_system.py  run_replay_comparison.py  system_forensic_audit.py  train_model.py  verify_phase10.py
src/: main.py  utils.py
tests/: analyze_overnight_run.py  conftest.py  refactor_ai.py  refactor_market_data.py  refactor_portfolio.py  refactor_strategy.py  test_features.py  test_hybrid.py  test_smart_cache.py  test_vectorization.py
(+170 files in other folders)
