[project]
name = "TradeSeeker"
version = "1.0.0"
description = "Elite Tactical Trading Bot"
authors = [{ name = "Maestro" }]
requires-python = ">=3.10"

[tool.ruff]
# Target Python version
target-version = "py310"
# Rules enabled
line-length = 100

# Directories to exclude from all checks and formatting
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "data",
    "models",
    "logs",
    "archive",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize syntax)
    "B",      # flake8-bugbear (prevent common bugs)
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "PT",     # flake8-pytest-style
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "RUF",    # ruff-specific advanced rules
    "PL",     # pylint
    "TID",    # flake8-tidy-imports
    "C90",    # mccabe complexity indicator
    "S",      # flake8-bandit (Security)
    "D",      # pydocstyle (Docstrings)
    "ANN",    # flake8-annotations (Type Annotations)
]
ignore = [
    # --- Structural & Complexity ---
    # Global complexity limits restored after Phase 13 Refactor

    # --- Magic Numbers (Phase 11) ---

    # --- Temporal/Timezone (Phase 12) ---

    # --- Documentation & Style (Phase 14) ---


    # --- Global/Environment ---
    "T201",    # Allow print (trading logs)
    "S603",    # Subprocess check
    "E501",    # Line too long
    "E402",    # Import positioning
    "PLW",     # Legacy Pylint warnings
    "E741",    # Ambiguous naming
    "S101",    # Use of assert
    "F811",    # Redefinition
    "N",       # PEP8 naming
    "UP038",   # isinstance (X | Y) - Py3.10+ style
    "PLC0415", # Local imports (allowed for circular dependency management)
    "B904", "E722", "S110", "S112", "S608", "S324", "S104", "F401"
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-first-party = ["src", "config", "tests"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# Ignore EVERYTHING for files not yet refactored to allow Phase 14 commits
"src/web/*" = ["ALL"]
"src/api/*" = ["ALL"]
"src/services/*" = ["ALL"]
"src/ai/*" = ["ALL"]
"src/main.py" = ["ALL"]
"src/utils.py" = ["ALL"]
"tests/*" = ["ALL"]
"scripts/*" = ["ALL"]
"config/*" = ["ALL"]
"src/__init__.py" = ["ALL"]
"config/__init__.py" = ["ALL"]
"oldportfoliomanager.py" = ["ALL"]
"src/core/*" = ["ALL"]
# Re-enable all checks specifically for PortfolioManager since Phase 14 is complete for it
"src/core/portfolio_manager.py" = []
"src/core/performance_monitor.py" = ["ALL"]

[tool.ty]
overrides = [
    { rules = { "invalid-parameter-default" = "ignore", "member-access" = "ignore", "type-mismatch" = "ignore", "unresolved-attribute" = "ignore", "possibly-missing-attribute" = "ignore", "invalid-return-type" = "ignore", "invalid-argument-type" = "ignore", "unsupported-operator" = "ignore", "invalid-assignment" = "ignore", "invalid-raise" = "ignore", "not-subscriptable" = "ignore", "unresolved-reference" = "ignore", "invalid-type-form" = "ignore", "no-matching-overload" = "ignore", "invalid-method-override" = "ignore", "unresolved-import" = "ignore" } }
]
